--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 version: "3.9" # optional since v1.27.0
 services:
   web:
+    platform: linux/amd64
     build:
       context: .
       dockerfile: local.dockerfile
@@ -17,7 +18,6 @@ services:
       redis:
         condition: service_healthy
     environment:
-      JAVA_HOME: "/usr/lib/jvm/java-11-openjdk-amd64"
       RAILS_ENV: development
       REDIS_HOST: redis
     restart: on-failure:3
@@ -33,7 +33,6 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      # - ./expertiza.sql:/docker-entrypoint-initdb.d/expertiza.sql
       - ./expertiza-db:/var/lib/mysql:rw
     environment:
       MYSQL_ROOT_PASSWORD: expertiza
